manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anchor-book-be
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: anchor-book-be
  template:
    metadata:
      labels:
        app: anchor-book-be
    spec:
      containers:
        - name: anchor-book-be
          image: 438282170065.dkr.ecr.ap-northeast-2.amazonaws.com/anchor-book-be:latest
          imagePullPolicy: Always
          #ports:
          #  - containerPort: 9090
          #livenessProbe:
          #  httpGet:
          #    port: 9090
          #  initialDelaySeconds: 5
          #  periodSeconds: 5
          #readinessProbe:
          #  httpGet:
          #    port: 9090
          #  initialDelaySeconds: 5
          #:w  periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: anchor-book-be
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/api"
spec:
  selector:
    app: anchor-book-be
  type: NodePort
  ports:
    - port: 9090
      targetPort: 9090
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "backend-ingress"
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
  - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: "anchor-book-be"
                port:
                  number: 9090
---
